welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:4: error: type mismatch;
 found   : Unit
 required: Boolean
		if (nums(i)=value) {
                           ^